# qjsx

./: .bazelrc  .ci.bazelrc  .gitignore  BUILD.bazel  DEVELOPMENT.md  README.md  WORKSPACE  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
.github/workflows/: publish_packages.yml  site.yml  tests.yml
site/: BUILD.bazel  eleventy.bzl  eleventy.ts  module-page.njk  packages.md
site/_includes/: function.njk  page.njk  style.css
tools/: bazel_deps.bzl  package.bzl  qjsx_package.bzl  release.sh  typescript.bzl
